# sparkie_base

./: .gitmodules  Dockerfile  entrypoint.sh
sparkie_base/: package.xml  setup.cfg  setup.py
sparkie_base/launch/: joy_teleop.launch.py  rviz.launch.py  sparkie.launch.py
sparkie_base/resource/: sparkie_base
sparkie_board_connect/: package.xml  setup.cfg  setup.py
sparkie_board_connect/launch/: board.launch.py
sparkie_board_connect/sparkie_board_connect/: __init__.py  sparkie_board.py  sparkie_reader.py
sparkie_board_connect/sparkie_board_connect/protos/: aht_pb2.py  airq_pb2.py  base_pb2.py  battery_pb2.py  imu_pb2.py  ledstrip_pb2.py  motors_pb2.py  nanopb_pb2.py  odometry_pb2.py  servo_pb2.py  ultrasonic_pb2.py
sparkie_description/: package.xml  setup.py
sparkie_description/launch/: desc.launch.py
sparkie_description/meshes/: main_body.stl
sparkie_description/urdf/: sparkiebot.xacro
